# AmorVitae

./: .gitignore  CMakeLists.txt  README.md  client.6.05.2020.xml  client_test.cpp  main.cpp  server_test.cpp  test_c.cpp  test_s.cpp
Net/include/: NetClient.h  NetServer.h  Object.h  PacketManager.h  PacketManagerServer.h  User.h  message_client.h  message_server.h
Net/src/: NetClient.cpp  NetServer.cpp  PacketManager.cpp  PacketManagerServer.cpp  User.cpp
Net/tests/: bind_test.cpp  packet_test.cpp
client/include/: actionManager.h  actionServer.h  clickProcessing.h  clientConnection.h  clientManager.h  displayManager.h  displayObject.h  event.h  player.h  position.h  requestManager.h  responseManager.h  stuctClient.h
client/src/: actionManager.cpp  actionServer.cpp  clickProcessing.cpp  clientConnection.cpp  clientManager.cpp  displayManager.cpp  displayObject.cpp  event.cpp  main.cpp  position.cpp  requestManager.cpp  responseManager.cpp
client/test/: actionManager.cpp  actionServer.cpp  clickProcessingTest.cpp  clientConnection.cpp  clientManagerTest.cpp  displayManager.cpp  displayObjectTest.cpp  event.cpp  playerTest.cpp  positionTest.cpp  requestManagerTest.cpp  responseManagerTest.cpp
cmake_modules/: FindSFML.cmake
graphics/include/: GraphicsManager.h  Menu.h  ObstacleModel.h  PlayerModel.h  ProjectileModel.h  drawobject.h  graphicsManager.h  struct_Config.h
graphics/src/: GraphicsManager.cpp  Menu.cpp  ObstacleModel.cpp  PlayerModel.cpp  ProjectileModel.cpp  graphicsManager.cpp  main.cpp
server/: CMakeLists.txt
server/include/: CollisionManager.h  Event.h  EventManager.h  Object.h  ObjectManager.h  PacketManager.h  User.h  World.h
server/src/: CMakeLists.txt  CollisionManager.cpp  Event.cpp  EventManager.cpp  Object.cpp  ObjectManager.cpp  World.cpp  main.cpp
server/tests/: EventTest.cpp  ObjectTest.cpp  main.cpp
